--- a/src/app/content-card/content-card.component.html
+++ b/src/app/content-card/content-card.component.html
@@ -2,7 +2,7 @@
     <p>{{ content.title }}</p>
     <p>{{ content.description }}</p>
     <p>{{ content.creator }}</p>
-    <img [src]="content.image">
-    <p>{{ content.type }}</p>
-    <p>{{ content.tags }}</p>
+    <img [src]="content.image || 'https://images.unsplash.com/photo-1605559424843-9e4c228bf1c2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8Y2Fyc3xlbnwwfHwwfHx8MA%3D%3D&w=1000&q=80'">
+    <p [appHoverAffect]="'text-decoration'">{{ content.type }}</p>
+  <p *ngFor="let tag of content.tags" [appHoverAffect]="'font-weight'">{{ tag }}</p>
 </div>
