--- a/src/app/content-list/content-list.component.scss
+++ b/src/app/content-list/content-list.component.scss
@@ -32,3 +32,16 @@ img {
     height: 300px;
 }
 
+.type1 {
+    background-color: green;
+    color: white;
+  }
+  
+  .type2 {
+    background-color: red;
+    color: white;
+  }
+  
+  .highlight {
+    border: 2px solid blue;
+  }
