--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,14 @@
+<section class="carById-sec">
+    <div class="idForm" >
+        <form (submit)="findCarById()">
+            <label for="carId">Enter an ID:</label> <br>
+            <input type="number" min="0" id="carId" name="carId" [(ngModel)]="carId" placeholder="Enter an ID">
+            <button>Get Car</button>
+        </form>
+    </div>
+    <div class="oneCard">
+        <app-content-card [car]="oneCarById" [class]="'oneCar'"></app-content-card>
+    </div>
+</section>
+
 <app-content-list></app-content-list>
